# rust-demo

./: Cargo.toml
config/: default.json
src/: settings.rs
src/models/: class_model.rs  mod.rs  student_model.rs
