[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.104"
config = "0.14.0"
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
validator = { version = "0.18.1", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
async-trait = "0.1.80"
